Fix missaligned panel launcher icons

--- a/Railway/cinnamon/cinnamon.css
+++ b/Railway/cinnamon/cinnamon.css
@@ -1797,6 +1797,11 @@ or .applet-icon,
   border-image: url("img/panel/applet__vertical__hover.svg") 12;
 }
 
+.launcher .applet-box {
+  /* 1px padding bug */
+  padding: 0;
+}
+
 /* ======================================
  * ! User Applet
  * ====================================== */
