--- a/Railway/cinnamon/scss/main/applets/_panel-launcher.scss
+++ b/Railway/cinnamon/scss/main/applets/_panel-launcher.scss
@@ -19,4 +19,9 @@
 			border-image: url("img/panel/applet__vertical__hover.svg") 12;
 		}
 	}
+
+	.applet-box {
+		/* 1px padding bug */
+		padding: 0;
+	}
 }
